--- a/DMRG_implementation.ipynb
+++ b/DMRG_implementation.ipynb
@@ -1024,7 +1024,7 @@
    "source": [
     "# Infinite-system DMRG\n",
     "\n",
-    "$\\quad$ We now apply the infinite-system DMRG to obtain the ground state energy per site of the infinite spin-1 Heisenberg 1D chain. The difference with respect to the truncated iterative diagonalization is the truncation employed, as sketched below.\n",
+    "$\\quad$ We now apply the infinite-system DMRG to obtain the ground state energy per site of an infinite spin-1 Heisenberg 1D chain. The difference with respect to the truncated iterative diagonalization is the truncation employed, as sketched below.\n",
     "\n",
     "<img src=\"iDMRG_scheme.png\" width=500 />\n",
     "\n",
