--- a/DMRG_implementation.ipynb
+++ b/DMRG_implementation.ipynb
@@ -1813,7 +1813,7 @@
    "source": [
     "## <u>Computation of expectation values and adaptive algorithm</u>\n",
     "\n",
-    "$\\quad$ Lastly, we demonstrate how to compute expectation values using the infinite-system DMRG. In particular, we consider a large ($N=100$) spin-1 Heisenberg chain, known to feature a fourfold degenerate ground state (composed of one singlet and one triplet), and compute the local distribution of the magnetization, $\\langle \\hat{S}^z_j \\rangle$, for the ground state with $S^z = +1$. In order to obtain the $S^z = +1$ ground state, we use the trick of adding to the Hamiltonian a Zeeman term,\n",
+    "$\\quad$ Lastly, we demonstrate how to compute expectation values using the infinite-system DMRG. In particular, we consider a large ($N=100$) spin-1 Heisenberg chain, known to feature a fourfold degenerate ground state (composed of one singlet and one triplet), and compute the local distribution of the magnetization, $\\langle \\hat{S}^z_j \\rangle$, for the ground state with $S^z \\equiv \\langle \\hat{S}^z \\rangle = +1$ (where $\\hat{S}^z = \\sum_{j=1}^{N} \\hat{S}^z_j$). In order to obtain the $S^z = +1$ ground state, we use the trick of adding to the Hamiltonian a Zeeman term,\n",
     "$$\n",
     "\\hat{\\mathcal{H}}_\\text{Z} =  -h\\sum_{j=1}^{N} \\hat{S}^z_j,\n",
     "$$\n",
